String utils: fix StandardCharsets support